# Stoq

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 46e23ed0b9b3_initial_schema.py  b1f2c3d4e5a6_add_forecast_unique_constraint.py  c3d4e5f6a7b8_add_stock_id_and_url_unique_to_news.py  d5e6f7a8b9c0_forecast_direction_classification.py
backend/api/: main.py  pagination.py  schemas.py
backend/api/routers/: admin.py  auth.py  forecasts.py  health.py  market.py  news.py  portfolios.py  stocks.py
backend/auth/: __init__.py  dependencies.py  repository.py  service.py
backend/core/: config.py  rate_limit.py  security.py  validation.py
backend/db/: base.py  session.py
backend/forecasting/: __init__.py  evaluation.py  features.py  repository.py  service.py
backend/forecasting/models/: __init__.py  base.py  factory.py  prophet_model.py  xgboost_model.py
backend/market_data/: provider.py  repository.py  service.py
backend/models/: __init__.py  forecast.py  news.py  portfolio.py  stock.py  user.py
backend/news/: provider.py  repository.py  sentiment.py  service.py
backend/portfolio/: repository.py  service.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_evaluation.py  test_features.py  test_forecasting_service.py  test_forecasts_api.py  test_health.py  test_main.py  test_market.py  test_news.py  test_portfolios.py  test_rate_limit.py  test_security.py  test_stocks.py  test_xgboost_model.py
docs/: API_Spec.md  Architecutre.md  DECISIONS.md  Database.md  Devops.md  ML_Design.md  PRD.md  REQUIREMENTS_TO_PROVIDE.txt  Roadmap.md  Tasks.md  Tech_stack.md  Testing.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  (+1 more)
(+26 files in other folders)
