[project]
name = "stock-prediction-backend"
version = "0.1.0"
description = "AI Financial Intelligence Platform - backend (modular monolith)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # Auth
    "bcrypt>=4.1",  # password hashing (used directly; passlib is unmaintained — ADR-0007)
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",  # OAuth2 password form parsing
    "email-validator>=2.2",  # backs pydantic EmailStr
    # Market data
    "yfinance>=0.2.50",
    "pandas>=2.2",
    # Forecasting (Phase 2). Lazy-imported inside model modules so the test
    # suite (stubbed forecaster) runs without these heavy wheels installed.
    "prophet>=1.1.5",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

# Heavy ML/NLP deps are added in their phases to keep early phases light:
#   sentiment (Phase 3): transformers, torch  (FinBERT)

# Run from source (Docker / uvicorn) rather than building a wheel; the modular
# monolith lives as top-level packages under backend/ per docs/Architecutre.md.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses `Depends()` in argument defaults by design.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations are machine-generated; don't enforce line length.
"alembic/versions/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
